--- a/pyproject.toml
+++ b/pyproject.toml
@@ -61,7 +61,7 @@ atlantis_models = { path = ".", editable = true }
 test = "NUMBA_DISABLE_JIT=1 pytest --cov=atmod --cov-report xml --cov-report term"
 test_local = "NUMBA_DISABLE_JIT=1 pytest -v --cov"
 format = "black ."
-lint = "ruff check --fix ./src/atmod"
+lint = "ruff check --fix ."
 build-docs = "sphinx-build -b html docs ./docs/build"
 rm-jupyter = "rm -r ./docs/jupyter_execute"
 rm-build = "rm -r ./docs/build"
