--- a/pyproject.toml
+++ b/pyproject.toml
@@ -50,7 +50,7 @@ packages = ["src/atmod"]
 [tool.hatch.build.targets.sdist]
 only-include = ["src/atmod", "tests"]
 
-[tool.pixi.project]
+[tool.pixi.workspace]
 channels = ["conda-forge"]
 platforms = ["win-64", "linux-64", "osx-64", "osx-arm64"]
 
@@ -98,8 +98,11 @@ python = "3.12.*"
 [tool.pixi.feature.py313.dependencies]
 python = "3.13.*"
 
+[tool.pixi.feature.py314.dependencies]
+python = "3.14.*"
+
 [tool.pixi.environments]
-default = { features = ["py313"], solve-group = "py313" }
+default = { features = ["py314"], solve-group = "py314" }
 py312 = { features = ["py312"], solve-group = "py312" }
 py313 = { features = ["py313"], solve-group = "py313" }
 
@@ -122,7 +125,7 @@ line-length = 88
 
 [tool.ruff]
 line-length = 88
-target-version = "py311"
+target-version = "py314"
 
 [tool.ruff.lint]
 select = ["F", "E", "W", "N", "I001", "NPY201"]
